--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3321,11 +3321,13 @@
 			@media screen and (max-width: 1280px) {
 
 				.wrapper.fullscreen {
-					min-height: calc(100vh - 2.5em);
+					/* min-height: calc(100vh - 2.5em); */
+					min-height: 100vh;
 				}
 
 					body.is-ie .wrapper.fullscreen {
-						height: calc(100vh - 2.5em);
+						/* height: calc(100vh - 2.5em); */
+						min-height: 100vh;
 					}
 
 			}
@@ -3334,7 +3336,7 @@
 
 				.wrapper.fullscreen {
 					padding: 2em 0;
-					min-height: 0;
+					min-height: 100vh;
 				}
 
 					body.is-ie .wrapper.fullscreen {
