--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1623,6 +1623,7 @@
 
 	body {
 		background: #333;
+		background-image: url("images/pattern.png");
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -3321,13 +3322,11 @@
 			@media screen and (max-width: 1280px) {
 
 				.wrapper.fullscreen {
-					/* min-height: calc(100vh - 2.5em); */
-					min-height: 100vh;
+					min-height: calc(100vh - 2.5em);
 				}
 
 					body.is-ie .wrapper.fullscreen {
-						/* height: calc(100vh - 2.5em); */
-						min-height: 100vh;
+						height: calc(100vh - 2.5em);
 					}
 
 			}
@@ -3336,7 +3335,7 @@
 
 				.wrapper.fullscreen {
 					padding: 2em 0;
-					min-height: 100vh;
+					min-height: 0;
 				}
 
 					body.is-ie .wrapper.fullscreen {
