--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3799,10 +3799,10 @@
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #f9a120, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #f9a120, #b74e91);
-				background-image: -ms-linear-gradient(to right, #f9a120, #b74e91);
-				background-image: linear-gradient(to right, #f9a120, #b74e91);
+				background-image: -moz-linear-gradient(to right, #b74e91, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #b74e91, #b74e91);
+				background-image: -ms-linear-gradient(to right, #b74e91, #b74e91);
+				background-image: linear-gradient(to right, #b74e91, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
